# GeometryLab

./: .clang-format  .gitignore  CMakeLists.txt  README.md  line.cpp  line.hpp  main.cpp  number_aliases.hpp  object_drawer.cpp  object_drawer.hpp  point.cpp  point.hpp  tests.cpp  vcpkg.json  world_converter.cpp  world_converter.hpp
